[project]
name = "homelab"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
  "ansible==13.1.0",
  "ansible-specdoc==0.0.19",
  "boto3==1.42.18",
  "botocore==1.42.19",
  "docker==7.1.0",
  "linode-api4==5.38.0",
  "polling==0.3.2",
]

[project.optional-dependencies]
dev = []

[dependency-groups]
dev = ["ansible-lint==25.12.2", "types-requests==2.32.4.20250913"]
